<resources>
    <string name="app_name">shiguang</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="demo_list_add_item">demo_list_add_item</string>
    <string name="demo_list_remove_item">demo_list_remove_item</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_school_login">教务处登陆</string>
    <string name="school_login_url">http://210.42.121.133/servlet/Login</string>
    <string name="school_login_genImg">http://210.42.121.133/servlet/GenImg</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">帐号格式有误，请检查后再次输入</string>
    <string name="error_invalid_password">密码格式有误</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">请输入帐号</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login">登陆</string>
    <string name="emailOrphone">邮箱/手机号</string>
    <string name="password">密码</string>
    <string name="login">登     录</string>
    <string name="regist">注     册</string>
    <string name="password_again">请再输入一次密码</string>
    <string name="phone">手机号</string>
</resources>
